# Industrial_Robot_Linear_Inverted_Pendulum

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: lqr_control.h
src/: lqr_control.cpp  main.cpp
